[gd_scene load_steps=4 format=3 uid="uid://bohl4l312wph0"]

[ext_resource type="Script" uid="uid://bfnaupgt06j52" path="res://inventory/scripts/inventory_slot.gd" id="1_6iytm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_smrsi"]
bg_color = Color(0.219501, 0.219501, 0.219501, 0.701961)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_clmqu"]

[node name="InventorySlot" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 85.0
offset_bottom = 85.0
script = ExtResource("1_6iytm")

[node name="OuterBorder" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.5
offset_top = -37.5
offset_right = 37.5
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0.596078, 0.933333, 0.8, 1)

[node name="InnerBorder" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.5
offset_top = -32.5
offset_right = 32.5
offset_bottom = 32.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0.611765, 0.603922, 0.584314, 1)

[node name="ItemIcon" type="Sprite2D" parent="InnerBorder"]
position = Vector2(35, 35)
scale = Vector2(0.08, 0.08)

[node name="ItemQuantity" type="Label" parent="InnerBorder"]
layout_mode = 0
offset_left = 5.0
offset_right = 25.0
offset_bottom = 28.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "1"

[node name="DetailsPanel" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_top = -135.0
offset_right = 240.0
offset_bottom = -5.0
color = Color(0.596078, 0.933333, 0.8, 1)

[node name="ItemName" type="Label" parent="DetailsPanel"]
layout_mode = 1
offset_left = 5.0
offset_right = 45.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0.0745098, 0.0745098, 0.0745098, 1)
theme_override_font_sizes/font_size = 40
text = "Name"

[node name="ItemType" type="Label" parent="DetailsPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 5.0
offset_top = -11.5
offset_right = 45.0
offset_bottom = 11.5
grow_vertical = 2
theme_override_colors/font_color = Color(0.0745098, 0.0745098, 0.0745098, 0.784314)
theme_override_font_sizes/font_size = 40
text = "Type"

[node name="ItemEffect" type="Label" parent="DetailsPanel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -23.0
offset_right = 45.0
grow_vertical = 0
theme_override_colors/font_color = Color(0.0745098, 0.0745098, 0.0745098, 0.588235)
theme_override_font_sizes/font_size = 40
text = "Effect"

[node name="UsagePanel" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_top = -193.0
offset_right = 240.0
offset_bottom = -3.0
color = Color(0.596078, 0.933333, 0.8, 1)

[node name="UseButton" type="Button" parent="UsagePanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -115.0
offset_top = 5.0
offset_right = 115.0
offset_bottom = 55.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 30
text = "Use"

[node name="AssignButton" type="Button" parent="UsagePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -115.0
offset_top = -25.0
offset_right = 115.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Hotbar"

[node name="DropButton" type="Button" parent="UsagePanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -115.0
offset_top = -55.0
offset_right = 115.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Drop"

[node name="ItemButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.5
offset_top = -37.5
offset_right = 37.5
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_smrsi")
theme_override_styles/normal = SubResource("StyleBoxEmpty_clmqu")
button_mask = 3

[connection signal="pressed" from="UsagePanel/UseButton" to="." method="_on_use_button_pressed"]
[connection signal="pressed" from="UsagePanel/AssignButton" to="." method="_on_assign_button_pressed"]
[connection signal="pressed" from="UsagePanel/DropButton" to="." method="_on_drop_button_pressed"]
[connection signal="gui_input" from="ItemButton" to="." method="_on_item_button_gui_input"]
[connection signal="mouse_entered" from="ItemButton" to="." method="_on_item_button_mouse_entered"]
[connection signal="mouse_exited" from="ItemButton" to="." method="_on_item_button_mouse_exited"]
